Better tests & functionality around schema calculations